gail: Fix the atk_add_key_event_listener implementation

Based on a patch by Alejandro Piñeiro Iglesias,
https://bugzilla.gnome.org/show_bug.cgi?id=599907